# normfluodat

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Notes.txt  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
data-raw/: dat_1.txt  data.csv
src/normfluodat/: __init__.py
src/normfluodat/subordinates/: __init__.py  clean_odddat_optimus.py  comma_cleaner.py  find_dats.py  find_dbfs.py  list_all_files.py  unique_identifier.py
