# A little redundant except mypy but ok for the demo on python- a nightmare so far 
[metadata]
name = normfluodbf
version = 1.5.2

#[options]
install_requires =
    pandas
    numpy

[coverage:run]
branch = True
source = normfluodat

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError()

#https://mypy.readthedocs.io/en/stable/config_file.html
#https://dev.to/tusharsadhwani/the-comprehensive-guide-to-mypy-561m (VSCODE)
[mypy]
strict = true
warn_unused_ignores = true
show_error_codes = true

[mypy-pandas]
ignore_missing_imports = False

